fix on several null point in which the game broke + disabling buttons on game invitation made + wider scrollbars

--- a/CardGame/wwwroot/css/site.css
+++ b/CardGame/wwwroot/css/site.css
@@ -31,12 +31,12 @@ body {
 }
 
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 20px;
 }
 
 @media screen and (max-width: 600px) {
   ::-webkit-scrollbar {
-    width: 15px;
+    width: 20px;
   }
 }
 
